fix(command): shrinking to the bottom of the page when searching on mobile device

--- a/styles/command.scss
+++ b/styles/command.scss
@@ -126,7 +126,7 @@
 
 @media (max-width: 640px) {
   [cmdk-root] {
-    top: initial;
+    top: 25%;
     bottom: 0;
   }
 }
